<resources>
    <string name="app_name"> Health Calc</string>

    <string name="app_titulo"> HeALTh\nCALC</string>
    <string name="login_activity_login"> Login</string>
    <string name="login_activity_subtitulo"> Faça login para continuar</string>
    <string name="login_activity_email">E-mail</string>
    <string name="login_activity_senha">Senha</string>
    <string name="login_activity_entrar">Entrar</string>
    <string name="login_activity_lembrar_me">Lembrar-me</string>
    <string name="login_activity_esqueci_a_senha">Esqueci a senha</string>
    <string name="nao_tem_uma_conta">Não tem uma conta?</string>
    <string name="login_activity_criar_uma_conta_agora">Criar uma conta agora</string>
    <string name="trocar_foto">Trocar Foto</string>
    <string name="dados_autentifica">Dados da autentificação</string>
    <string name="dados_pessoais">dados_pessoais</string>
    <string name="matenha_peso">Mantenha seu peso sempre atualizado, assim você poderá acompar toda a evolução</string>
    <string name="vamos_pesar">Vamos nos Pesar?</string>
    <string name="nivel_atividade">Nível de atividade:</string>
    <string name="data">20/11/2021</string>
    <string name="data_pesagem">Data da pesagem:</string>
    <string name="dados_pessoas">Dados da sua pessoa</string>
    <string name="novo_peso">Seu novo peso:</string>
    <string name="kg">68 Kg:</string>
    <string name="registrar_peso">Registrar peso</string>


    <string-array name="niveis">
        <item> Atividade Leve</item>
        <item> Atividade Moderada</item>
        <item> Atividade Intensa</item>
    </string-array>
</resources>