<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:elevation="4dp"
            app:cardCornerRadius="25dp"
            android:layout_gravity="end"

            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/papa"
                android:scaleType="centerCrop"
                />

        </androidx.cardview.widget.CardView>
        <ImageView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/banner"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"

            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/vamos_pesar"/>

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/info_24"

            android:layout_marginTop="4dp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/primary_dark"
            android:gravity="center_vertical"
            android:text="@string/matenha_peso"
            android:textSize="12sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:drawableStart="@drawable/accessibility_24"
            android:text="@string/dados_pessoas"
            android:textSize="20sp"
            android:textStyle="bold"

            android:drawablePadding="10dp"
            android:textColor="@color/primary_dark"
            android:drawableTint="@color/primary_dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/data_pesagem"
            android:textColor="@color/black"
            android:textSize="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/data"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nivel_atividade"
            android:textColor="@color/black"
            android:textSize="15dp"
           />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
             app:cardBackgroundColor="@color/primary_dark">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:drawableEnd="@drawable/arrow_24"
               android:drawableTint="@color/primary_light"

            />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/novo_peso"
            android:textColor="@color/black"
            android:textSize="12sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kg"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/registrar_peso"
            android:backgroundTint="@color/primary_dark"
            android:layout_marginTop="10dp"
          >

        </Button>
    </LinearLayout>


</LinearLayout>